# BHVstats

./: .gitignore  LICENSE  README.md  pyproject.toml
bhvstats/: __init__.py  bhv_test.py  bhv_test_bootstrap.py  eval_geod.py  forest.py  grad_descent_degrees.py  grad_descent_derivs.py  mult_hyp.py  new2phylo.py  phylo_block.py  phylo_geod.py  phylo_path.py  phylo_simple_geod.py  phylo_split.py  phylo_tree.py  project_trees.py  prox_split_degrees.py  prox_split_derivs.py  sturm_mean.py  t2_test.py  t_test.py  tree_distance.py  two_sample_tests.py
examples/: basics.ipynb
tests/: test_forest.py  test_geodesics.py  test_newick.py  test_phylo_trees.py  test_projection.py  test_simple_geodesics.py
