[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bhvstats"
version = "0.1"
authors = [
  { name="Lars Lammers"},
]
description = "An implementation for basic statistics in BHV spaces."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
	"numpy",
	"scipy",
	"matplotlib",
	"networkx"
]

[project.urls]
Homepage = "https://github.com/larlam/bhvstats"
Issues = "https://github.com/larlam/bhvstats/issues"
